--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -24,10 +24,10 @@ const server = createServer({
     `,
     resolvers: {
       Query: {
-        hello: () => 'Hello from Yoga!',
-      },
-    },
-  },
+        hello: () => 'Hello from Yoga!'
+      }
+    }
+  }
 })
 
 server.start()
