--- a/website/src/pages/docs/integrations/integration-with-sveltekit.mdx
+++ b/website/src/pages/docs/integrations/integration-with-sveltekit.mdx
@@ -31,13 +31,13 @@ const yogaApp = createServer<RequestEvent>({
     `,
     resolvers: {
       Query: {
-        hello: () => 'SvelteKit - GraphQL Yoga',
-      },
-    },
+        hello: () => 'SvelteKit - GraphQL Yoga'
+      }
+    }
   },
   graphiql: {
-    endpoint: '/api/graphql',
-  },
+    endpoint: '/api/graphql'
+  }
 })
 
 export { yogaApp as get, yogaApp as post }
