--- a/website/src/pages/tutorial/basic/01-project-setup.mdx
+++ b/website/src/pages/tutorial/basic/01-project-setup.mdx
@@ -34,7 +34,7 @@ In your project directory, install the packages required to run a TypeScript pro
 
 <PackageCmd
   packages={[
-    '-D --save-exact typescript @types/node ts-node ts-node-dev cross-env',
+    '-D --save-exact typescript @types/node ts-node ts-node-dev cross-env'
   ]}
 />
 
