--- a/website/src/pages/tutorial/basic/06-adding-a-database.mdx
+++ b/website/src/pages/tutorial/basic/06-adding-a-database.mdx
@@ -191,8 +191,8 @@ First, it helps us understand that `.create()` is the operation we need (just sc
 const newLink = await prisma.link.create({
   data: {
     description: 'Fullstack tutorial for GraphQL',
-    url: 'www.howtographql.com',
-  },
+    url: 'www.howtographql.com'
+  }
 })
 ```
 
