--- a/website/src/pages/v3/integrations/integration-with-aws-lambda.mdx
+++ b/website/src/pages/v3/integrations/integration-with-aws-lambda.mdx
@@ -26,7 +26,7 @@ export const handler: Handler = configure({
   // Pass Yoga as app
   app,
   // Pass Yoga's logger to listen to the logs from Serverless Express as well
-  log: app.logger,
+  log: app.logger
 })
 ```
 
