--- a/website/src/pages/v3/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/v3/integrations/integration-with-cloudflare-workers.mdx
@@ -75,7 +75,7 @@ const yoga = createYoga<Env>({
   resolvers: {
     Query: {
       todo: (_, { id }, { MY_NAMESPACE }) => MY_NAMESPACE.get(id),
-      todos: (_, __, { MY_NAMESPACE }) => MY_NAMESPACE.list(),
+      todos: (_, __, { MY_NAMESPACE }) => MY_NAMESPACE.list()
     },
     Mutation: {
       // MY_NAMESPACE is available as a GraphQL context
@@ -84,9 +84,9 @@ const yoga = createYoga<Env>({
       },
       deleteTodo(_, { id }, context) {
         return context.MY_NAMESPACE.delete(id)
-      },
-    },
-  },
+      }
+    }
+  }
 })
 
 export default { fetch: yoga.handleRequest }
@@ -106,7 +106,7 @@ const yoga = createYoga<{ env: Env; ctx: ExecutionContext }>()
 export default {
   fetch(request: Request, env: Env, ctx: ExecutionContext) {
     return yoga.handleRequest(request, { env, ctx })
-  },
+  }
 }
 ```
 
