--- a/website/src/pages/v3/migration/migration-from-yoga-v2.mdx
+++ b/website/src/pages/v3/migration/migration-from-yoga-v2.mdx
@@ -133,10 +133,10 @@ new GraphQLError('My error message', {
     http: {
       status: 401,
       headers: {
-        'X-Custom-Header': 'my-custom-value',
-      },
-    },
-  },
+        'X-Custom-Header': 'my-custom-value'
+      }
+    }
+  }
 })
 ```
 
