--- a/website/src/pages/docs/features/apollo-federation.mdx
+++ b/website/src/pages/docs/features/apollo-federation.mdx
@@ -26,7 +26,7 @@ Thanks to [Envelop's Apollo Federation](https://envelop.dev/plugins/use-apollo-f
 
 <PackageCmd
   packages={[
-    '@graphql-yoga/node @apollo/gateway @envelop/apollo-federation graphql@15',
+    '@graphql-yoga/node @apollo/gateway @envelop/apollo-federation graphql@15'
   ]}
 />
 
@@ -53,22 +53,22 @@ class DataSource extends RemoteGraphQLDataSource {
 const gateway = new ApolloGateway({
   serviceList: [
     { name: 'accounts', url: 'http://localhost:4001' },
-    { name: 'products', url: 'http://localhost:4002' },
+    { name: 'products', url: 'http://localhost:4002' }
     // ...additional subgraphs...
   ],
   introspectionHeaders: {
-    accept: 'application/json',
+    accept: 'application/json'
   },
   buildService({ url }) {
     return new DataSource({ url })
-  },
+  }
 })
 
 // Make sure all services are loaded
 await gateway.load()
 
 const server = createServer({
-  plugins: [useApolloFederation({ gateway })],
+  plugins: [useApolloFederation({ gateway })]
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -105,17 +105,17 @@ const resolvers = {
   Query: {
     me() {
       return { id: '1', username: '@ava' }
-    },
+    }
   },
   User: {
     __resolveReference(user, { fetchUserById }) {
       return fetchUserById(user.id)
-    },
-  },
+    }
+  }
 }
 const server = createServer({
   schema: buildSubgraphSchema([{ typeDefs, resolvers }]),
-  port: 4001,
+  port: 4001
 })
 
 server.start().then(() => {
