--- a/website/src/pages/docs/features/cors.mdx
+++ b/website/src/pages/docs/features/cors.mdx
@@ -37,8 +37,8 @@ const yogaApp = createServer({
     origin: 'http://localhost:4000',
     credentials: true,
     allowedHeaders: ['X-Custom-Header'],
-    methods: ['POST'],
-  },
+    methods: ['POST']
+  }
   /* ...other args */
 })
 ```
@@ -66,9 +66,9 @@ const yogaApp = createServer({
       origin: requestOrigin,
       credentials: true,
       allowedHeaders: ['X-Custom-Header'],
-      methods: ['POST'],
+      methods: ['POST']
     }
-  },
+  }
 })
 ```
 
@@ -88,8 +88,8 @@ You can disable CORS on your Yoga server by simply passing `false` as the cors p
 import { createServer } from '@graphql-yoga/common'
 
 const yogaApp = createServer({
-  cors: false,
-  /* ...other args */
+  cors: false
+  // ...other args
 })
 ```
 
