--- a/website/src/pages/docs/features/envelop-plugins.mdx
+++ b/website/src/pages/docs/features/envelop-plugins.mdx
@@ -21,11 +21,11 @@ const server = createServer({
     `,
     resolvers: {
       Query: {
-        greetings: () => 'Hello World!',
-      },
-    },
+        greetings: () => 'Hello World!'
+      }
+    }
   },
-  plugins: [useGraphQlJit()],
+  plugins: [useGraphQlJit()]
 })
 
 // Start the server and explore http://localhost:4000/graphql
