--- a/website/src/pages/docs/features/graphiql.mdx
+++ b/website/src/pages/docs/features/graphiql.mdx
@@ -19,8 +19,8 @@ const server = createServer({
       query {
         hello
       }
-    `,
-  },
+    `
+  }
 })
 // Start the server and explore http://localhost:4000/graphql
 server.start()
@@ -53,7 +53,7 @@ import { useDisableIntrospection } from '@envelop/disable-introspection'
 // Provide your schema
 const server = createServer({
   graphiql: false,
-  plugins: [useDisableIntrospection()],
+  plugins: [useDisableIntrospection()]
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -74,8 +74,8 @@ const server = createServer({
   plugins: [useDisableIntrospection()],
   maskedErrors: {
     handleParseErrors: true,
-    handleValidationErrors: true,
-  },
+    handleValidationErrors: true
+  }
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -102,7 +102,7 @@ const server = createServer({
       return true
     }
     return false
-  },
+  }
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -124,7 +124,7 @@ const server = createServer({
       return true
     }
     return false
-  },
+  }
 })
 
 // Start the server and explore http://localhost:4000/graphql
