--- a/website/src/pages/docs/integrations/integration-with-deno.mdx
+++ b/website/src/pages/docs/integrations/integration-with-deno.mdx
@@ -14,9 +14,7 @@ import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common'
 
 const graphQLServer = createServer()
 
-serve(graphQLServer, {
-  port: 4000,
-})
+serve(graphQLServer, { port: 4000 })
 
 console.log('Server is running on http://localhost:4000/graphql')
 ```
