--- a/website/src/pages/tutorial/basic/07-connecting-server-and-database.mdx
+++ b/website/src/pages/tutorial/basic/07-connecting-server-and-database.mdx
@@ -119,33 +119,33 @@ const resolvers = {
   Query: {
     info: () => `This is the API of a Hackernews Clone`,
     feed: (parent: unknown, args: {}, context: GraphQLContext) =>
-      context.prisma.link.findMany(),
+      context.prisma.link.findMany()
   },
   Link: {
     id: (parent: Link) => parent.id,
     description: (parent: Link) => parent.description,
-    url: (parent: Link) => parent.url,
+    url: (parent: Link) => parent.url
   },
   Mutation: {
     async postLink(
       parent: unknown,
       args: { description: string; url: string },
-      context: GraphQLContext,
+      context: GraphQLContext
     ) {
       const newLink = await context.prisma.link.create({
         data: {
           url: args.url,
-          description: args.description,
-        },
+          description: args.description
+        }
       })
       return newLink
-    },
-  },
+    }
+  }
 }
 
 export const schema = makeExecutableSchema({
   resolvers: [resolvers],
-  typeDefs: [typeDefinitions],
+  typeDefs: [typeDefinitions]
 })
 ```
 
@@ -166,8 +166,8 @@ const resolvers = {
     // ...
     feed: async (parent: unknown, args: {}, context: GraphQLContext) => {
       return context.prisma.link.findMany()
-    },
-  },
+    }
+  }
   // ...
 }
 ```
@@ -186,17 +186,17 @@ const resolvers = {
     async postLink(
       parent: unknown,
       args: { description: string; url: string },
-      context: GraphQLContext,
+      context: GraphQLContext
     ) {
       const newLink = await context.prisma.link.create({
         data: {
           url: args.url,
-          description: args.description,
-        },
+          description: args.description
+        }
       })
       return newLink
-    },
-  },
+    }
+  }
 }
 ```
 
