--- a/website/src/pages/v3/features/apollo-federation.mdx
+++ b/website/src/pages/v3/features/apollo-federation.mdx
@@ -29,7 +29,7 @@ Thanks to [Envelop's Apollo Federation](https://envelop.dev/plugins/use-apollo-f
     'graphql-yoga',
     '@apollo/gateway',
     '@envelop/apollo-federation',
-    'graphql@15',
+    'graphql@15'
   ]}
 />
 
@@ -45,9 +45,9 @@ import { useApolloFederation } from '@envelop/apollo-federation'
 const gateway = new ApolloGateway({
   serviceList: [
     { name: 'accounts', url: 'http://localhost:4001' },
-    { name: 'products', url: 'http://localhost:4002' },
+    { name: 'products', url: 'http://localhost:4002' }
     // ...additional subgraphs...
-  ],
+  ]
 })
 
 // Make sure all services are loaded
@@ -56,9 +56,9 @@ await gateway.load()
 const yoga = createYoga({
   plugins: [
     useApolloFederation({
-      gateway,
-    }),
-  ],
+      gateway
+    })
+  ]
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -99,16 +99,16 @@ const resolvers = {
   Query: {
     me() {
       return { id: '1', username: '@ava' }
-    },
+    }
   },
   User: {
     __resolveReference(user, { fetchUserById }) {
       return fetchUserById(user.id)
-    },
-  },
+    }
+  }
 }
 const yoga = createYoga({
-  schema: buildSubgraphSchema([{ typeDefs, resolvers }]),
+  schema: buildSubgraphSchema([{ typeDefs, resolvers }])
 })
 
 const server = createServer(yoga)
@@ -130,7 +130,7 @@ You'll need the `@graphql-yoga/plugin-apollo-inline-trace` Yoga plugin for this.
   packages={[
     'graphql-yoga',
     '@graphql-yoga/plugin-apollo-inline-trace',
-    'graphql',
+    'graphql'
   ]}
 />
 
@@ -143,9 +143,9 @@ import { useApolloInlineTrace } from '@graphql-yoga/plugin-apollo-inline-trace'
 
 const yoga = createYoga({
   plugins: [
-    useApolloInlineTrace(),
+    useApolloInlineTrace()
     // ...rest of your Apollo federation plugins
-  ],
+  ]
 })
 
 // Start the server and explore http://localhost:4000/graphql
