--- a/website/src/pages/v3/features/error-masking.mdx
+++ b/website/src/pages/v3/features/error-masking.mdx
@@ -27,14 +27,14 @@ const yoga = createYoga({
         greeting: async () => {
           // This service does not exist
           const greeting = await fetch('http://localhost:9876/greeting').then(
-            (res) => res.text(),
+            (res) => res.text()
           )
 
           return greeting
-        },
-      },
-    },
-  }),
+        }
+      }
+    }
+  })
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -113,14 +113,14 @@ const yoga = createYoga({
         greeting: async () => {
           // This service does not exist
           const greeting = await fetch('http://localhost:9876/greeting').then(
-            (res) => res.text(),
+            (res) => res.text()
           )
 
           return greeting
-        },
-      },
-    },
-  }),
+        }
+      }
+    }
+  })
 })
 
 const server = createServer(yoga)
@@ -177,18 +177,9 @@ import { createYoga, createSchema } from 'graphql-yoga'
 import { GraphQLError } from 'graphql'
 
 const users = [
-  {
-    id: '1',
-    login: 'Laurin',
-  },
-  {
-    id: '2',
-    login: 'Saihaj',
-  },
-  {
-    id: '3',
-    login: 'Dotan',
-  },
+  { id: '1', login: 'Laurin' },
+  { id: '2', login: 'Saihaj' },
+  { id: '3', login: 'Dotan' }
 ]
 
 // Provide your schema
@@ -212,10 +203,10 @@ const yoga = createYoga({
           }
 
           return user
-        },
-      },
-    },
-  }),
+        }
+      }
+    }
+  })
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -266,18 +257,9 @@ import { createSchema, createServer } from 'graphql-yoga'
 import { GraphQLError } from 'graphql'
 
 const users = [
-  {
-    id: '1',
-    login: 'Laurin',
-  },
-  {
-    id: '2',
-    login: 'Saihaj',
-  },
-  {
-    id: '3',
-    login: 'Dotan',
-  },
+  { id: '1', login: 'Laurin' },
+  { id: '2', login: 'Saihaj' },
+  { id: '3', login: 'Dotan' }
 ]
 
 // Provide your schema
@@ -302,17 +284,17 @@ const yoga = createYoga({
               // error extensions
               {
                 extensions: {
-                  code: 'USER_NOT_FOUND',
-                },
-              },
+                  code: 'USER_NOT_FOUND'
+                }
+              }
             )
           }
 
           return user
-        },
-      },
-    },
-  }),
+        }
+      }
+    }
+  })
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -367,11 +349,11 @@ throw new GraphQLError(
       userId: args.byId,
       foo: {
         some: {
-          complex: ['structure'],
-        },
-      },
-    },
-  },
+          complex: ['structure']
+        }
+      }
+    }
+  }
 )
 ```
 
@@ -413,9 +395,7 @@ We highly recommend using error masking.
 However, you can still disable it using the `maskedErrors` config option.
 
 ```ts
-createYoga({
-  maskedErrors: false,
-})
+createYoga({ maskedErrors: false })
 ```
 
 Executing the following operation will now result within a leaking error message that exposes information about internal API calls.
