--- a/website/src/pages/v3/features/file-uploads.mdx
+++ b/website/src/pages/v3/features/file-uploads.mdx
@@ -34,7 +34,7 @@ const yoga = createYoga({
     `,
     resolvers: {
       Query: {
-        greetings: () => 'Hello World!',
+        greetings: () => 'Hello World!'
       },
       Mutation: {
         /**
@@ -45,10 +45,10 @@ const yoga = createYoga({
         readTextFile: async (_, { file }: { file: File }) => {
           const textContent = await file.text()
           return textContent
-        },
-      },
-    },
-  }),
+        }
+      }
+    }
+  })
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
@@ -79,7 +79,7 @@ import {
   mutationField,
   queryField,
   arg,
-  nonNull,
+  nonNull
 } from 'nexus'
 import { createYoga } from 'graphql-yoga'
 
@@ -87,12 +87,12 @@ const FileScalar = scalarType({
   name: 'File',
   asNexusMethod: 'file',
   description: 'The `File` scalar type represents a file upload.',
-  sourceType: 'File',
+  sourceType: 'File'
 })
 
 const greetings = queryField('greetings', {
   type: 'String',
-  resolve: () => 'Hello World!',
+  resolve: () => 'Hello World!'
 })
 
 const readTextFile = mutationField('readTextFile', {
@@ -101,15 +101,15 @@ const readTextFile = mutationField('readTextFile', {
   resolve: async (parent, { file }, ctx) => {
     const textContent = await file.text()
     return textContent
-  },
+  }
 })
 
 const schema = makeSchema({
-  types: [FileScalar, greetings, readTextFile],
+  types: [FileScalar, greetings, readTextFile]
 })
 
 const yoga = createYoga({
-  schema: schema,
+  schema: schema
 })
 
 // Start the server and explore http://localhost:4000/graphql
@@ -124,9 +124,7 @@ server.listen(4000, () => {
 If you want to disable multipart request processing for some reason, you can pass `multipart: false` to prevent Yoga from handling multipart requests.
 
 ```ts
-createYoga({
-  multipart: false,
-})
+createYoga({ multipart: false })
 ```
 
 ## Configuring Multipart Request Processing (only for Node.js)
@@ -152,8 +150,8 @@ createYoga({
       // Maximum allowed size of content (operations, variables etc...)
       fieldSize: 1000000,
       // Maximum allowed header size for form data
-      headerSize: 1000000,
-    },
-  }),
+      headerSize: 1000000
+    }
+  })
 })
 ```
