--- a/website/src/pages/v3/features/graphiql.mdx
+++ b/website/src/pages/v3/features/graphiql.mdx
@@ -1,8 +1,8 @@
-import { PackageCmd } from '@theguild/components'
+import { PackageCmd, Callout } from '@theguild/components'
 
 # GraphiQL
 
-[GraphiQL is an in-browser IDE for writing, validating, and testing GraphQL queries.](https://github.com/graphql/graphiql)
+[GraphiQL](https://github.com/graphql/graphiql) is an in-browser IDE for writing, validating, and testing GraphQL queries.
 
 You can configure or completely disable GraphiQL with the `graphiql` option.
 By default, GraphiQL is only enabled.
@@ -19,8 +19,8 @@ const yoga = createYoga({
       query {
         hello
       }
-    `,
-  },
+    `
+  }
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
@@ -31,15 +31,14 @@ server.listen(4000, () => {
 
 ## Disabling GraphiQL
 
-You can disable GraphiQL simply setting the `graphiql` option to `false`.
+You can disable GraphiQL simply by setting `graphiql: false{:ts}`.
 
-```ts
+```ts /graphiql: false/
 import { createYoga } from 'graphql-yoga'
 
 // Provide your schema
-const yoga = createYoga({
-  graphiql: false,
-})
+const yoga = createYoga({ graphiql: false })
+
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
 server.listen(4000, () => {
@@ -47,7 +46,11 @@ server.listen(4000, () => {
 })
 ```
 
-> Be aware that this does not really make your GraphQL server more secure. As long as the introspection and/or the "did you mean x" suggestion feature of GraphQL are enabled.
+<Callout>
+  Be aware that this does not really make your GraphQL server more secure. As
+  long as the introspection and/or the "did you mean x" suggestion feature of
+  GraphQL are enabled.
+</Callout>
 
 ```ts
 import { createYoga } from 'graphql-yoga'
@@ -56,7 +59,7 @@ import { useDisableIntrospection } from '@envelop/disable-introspection'
 // Provide your schema
 const yoga = createYoga({
   graphiql: false,
-  plugins: [useDisableIntrospection()],
+  plugins: [useDisableIntrospection()]
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
@@ -65,7 +68,7 @@ server.listen(4000, () => {
 })
 ```
 
-Disabling the "did you mean x" suggestion feature is not possible at the moment ([see the corresponding graphql-js GitHub issue](https://github.com/graphql/graphql-js/issues/2247)).
+Disabling the "did you mean x" suggestion feature is not possible at the moment ([see the corresponding `graphql-js` GitHub issue](https://github.com/graphql/graphql-js/issues/2247)).
 
 As a workaround you can use the `maskedError` option for masking `validation` and `parse` errors.
 
@@ -79,8 +82,8 @@ const yoga = createYoga({
   plugins: [useDisableIntrospection()],
   maskedErrors: {
     handleParseErrors: true,
-    handleValidationErrors: true,
-  },
+    handleValidationErrors: true
+  }
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
@@ -104,12 +107,12 @@ import { createYoga } from 'graphql-yoga'
 
 // Provide your schema
 const yoga = createYoga({
-  graphiql: (request) => {
+  graphiql(request) {
     if (request.headers.get('graphiql-enabled')) {
       return true
     }
     return false
-  },
+  }
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
@@ -126,14 +129,14 @@ import { createYoga } from 'graphql-yoga'
 
 // Provide your schema
 const yoga = createYoga({
-  graphiql: (request, { req, res }) => {
+  graphiql(request, { req, res }) {
     // access something attached to the request object
     // e.g. an user object added by an auth middleware.
     if (req.user.role === 'admin') {
       return true
     }
     return false
-  },
+  }
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
@@ -149,13 +152,11 @@ If you want to use GraphiQL from a local version, you need to install it manuall
 
 <PackageCmd packages={['@graphql-yoga/render-graphiql']} />
 
-And you need to pass imported `renderGraphiQL` to `createServer` like below;
+And you need to pass imported `renderGraphiQL` to `createServer` like below:
 
-```ts
+```ts /renderGraphiQL/
 import { createYoga } from 'graphql-yoga'
 import { renderGraphiQL } from '@graphql-yoga/render-graphiql'
 
-const yoga = createYoga({
-  renderGraphiQL,
-})
+const yoga = createYoga({ renderGraphiQL })
 ```
