--- a/website/src/pages/v3/integrations/integration-with-fastify.mdx
+++ b/website/src/pages/v3/integrations/integration-with-fastify.mdx
@@ -30,8 +30,8 @@ const yoga = createYoga<{
     debug: (...args) => args.forEach((arg) => app.log.debug(arg)),
     info: (...args) => args.forEach((arg) => app.log.info(arg)),
     warn: (...args) => args.forEach((arg) => app.log.warn(arg)),
-    error: (...args) => args.forEach((arg) => app.log.error(arg)),
-  },
+    error: (...args) => args.forEach((arg) => app.log.error(arg))
+  }
 })
 
 /**
@@ -46,7 +46,7 @@ app.route({
     // Second parameter adds Fastify's `req` and `reply` to the GraphQL Context
     const response = await yoga.handleNodeRequest(req, {
       req,
-      reply,
+      reply
     })
     response.headers.forEach((value, key) => {
       reply.header(key, value)
@@ -57,7 +57,7 @@ app.route({
     reply.send(response.body)
 
     return reply
-  },
+  }
 })
 
 app.listen(4000)
@@ -70,7 +70,7 @@ Fastify needs to be aware of GraphQL Yoga will handle `multipart/form-data` requ
 ```ts
 // This will allow Fastify to forward multipart requests to GraphQL Yoga
 app.addContentTypeParser('multipart/form-data', {}, (req, payload, done) =>
-  done(null),
+  done(null)
 )
 ```
 
