--- a/website/src/pages/v3/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nestjs.mdx
@@ -1,24 +1,24 @@
-import { PackageCmd } from '@theguild/components'
+import { PackageCmd, Callout } from '@theguild/components'
 
 # Integration with NestJS
 
-[Nest (Nest JS)](https://nestjs.com/) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
+
+[Nest (Nest JS)](https://nestjs.com) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
 GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that support building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
-
-<p>&nbsp;</p>
 
 ## Standalone GraphQL API
 
 ### Installation
 
-<PackageCmd packages={['@nestjs/graphql', '@graphql-yoga/nestjs']} />
+<PackageCmd packages={['@graphql-yoga/nestjs @nestjs/graphql']} />
 
-_For the setup of a new Nest project, please make sure to read the [Nest GraphQL documentation](https://docs.nestjs.com/graphql/quick-start)._
+<Callout>
+  For the setup of a new Nest project, please make sure to read the [Nest
+  GraphQL documentation](https://docs.nestjs.com/graphql/quick-start).
+</Callout>
 
-<p>&nbsp;</p>
-
-### Schema-first approach
+### Schema-First Approach
 
 With the following Nest project structure:
 
@@ -70,9 +70,9 @@ input CreateCatInput {
 }
 ```
 
-Our Yoga Nest GraphQL Module (`app.module.ts`) will defined as follows:
+Our Yoga Nest GraphQL Module (`app.module.ts`) will be defined as follows:
 
-```ts
+```ts filename="app.module.ts"
 import { YogaDriver, YogaDriverConfig } from '@graphql-yoga/nestjs'
 import { Module } from '@nestjs/common'
 import { GraphQLModule } from '@nestjs/graphql'
@@ -84,18 +84,16 @@ import { CatsModule } from './cats/cats.module'
     GraphQLModule.forRoot<YogaDriverConfig>({
       driver: YogaDriver,
       typePaths: ['./**/*.graphql'],
-      installSubscriptionHandlers: true,
-    }),
-  ],
+      installSubscriptionHandlers: true
+    })
+  ]
 })
 export class AppModule {}
 ```
 
 More information [on the dedicated example](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/schema-first).
 
-<p>&nbsp;</p>
-
-### Code-first approach
+### Code-First Approach
 
 The code-first approach generates the GraphQL Schema based on resolvers and models.
 
@@ -141,9 +139,9 @@ export class RecipesResolver {
 }
 ```
 
-Our Yoga Nest GraphQL Module (`app.module.ts`) will defined as follows:
+Our Yoga Nest GraphQL Module (`app.module.ts`) will be defined as follows:
 
-```ts
+```ts filename="app.module.ts"
 import { YogaDriver, YogaDriverConfig } from '@graphql-yoga/nestjs'
 import { Module } from '@nestjs/common'
 import { GraphQLModule } from '@nestjs/graphql'
@@ -154,20 +152,16 @@ import { RecipesModule } from './recipes/recipes.module'
     RecipesModule,
     GraphQLModule.forRoot<YogaDriverConfig>({
       driver: YogaDriver,
-      autoSchemaFile: 'schema.gql',
-    }),
-  ],
+      autoSchemaFile: 'schema.gql'
+    })
+  ]
 })
 export class AppModule {}
 ```
 
 More information [on the dedicated example](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/code-first).
 
-<p>&nbsp;</p>
-
 ---
-
-<p>&nbsp;</p>
 
 ## Apollo Federation
 
@@ -175,4 +169,7 @@ Yoga Nest GraphQL integration supports building Apollo Federation Gateway and Se
 
 A complete example [is available in the repository](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/graphql-federation-code-first).
 
-> ⚠️ `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with `graphql@15`.
+<Callout type="warning" emoji="⚠️">
+  `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with
+  `graphql@15`.
+</Callout>
